--- a/index.html
+++ b/index.html
@@ -7,6 +7,51 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="page">
+        <!-- header -->
+         <header class="header">
+            <div class="container">
+                <div class="header__inner">
+                    <img class="nave__logo" src="svg/Logo.svg" alt="logotip Alvio">
+                    <nav class="nav">
+                        <ul class="nav__list">
+                            <li class="nav__item"><a class="nav__link" href="">Why alivio</a></li>
+                            <li class="nav__item"><a class="nav__link" href=""></a>So;ution</li>
+                            <li class="nav__item"><a class="nav__link" href=""></a>Community</li>
+                            <li class="nav__item"><a class="nav__link" href=""></a>Pricing</li>
+                        </ul>
+                        <form class="nav__form" action="">
+                            <button class="nav__sign-in" type="submit">Sign in</button>
+                            <button class="nav__btn" type="button">Start trial</button>
+                        </form>
+                    </nav>
+                </div>
+            </div>
+         </header>
+        <!-- intro -->
+         <div class="intro">
+            <div class="container">
+                <div class="intro__inner">
+                    <h1 class="intro__title">Be aware, Manage well.</h1>
+                    <p class="intro__text">
+                        Everyone experiences stress in different ways.
+                        Let Alivio guide you, in a personalized journal experience, to overcome your stress.
+                    </p>
+                    <button class="intro__btn" type="submit">Find Your Way</button>
+                </div>
+            </div>
+         </div>
+        <!-- main -->
+         <main class="main">
+            <!-- section works -->
+            <secton class="works">
+                <div class="container">
+                    <div class="works__inner">
+                        
+                    </div>
+                </div>
+            </secton>
+         </main>
+    </div>     
 </body>
 </html>
