--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alvio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -16,10 +13,15 @@
             <div class="container">
                 <div class="header__inner">
                     <img class="header__logo" src="svg/Logo.svg" alt="logotip Alvio">
+                    <button class="burger">
+                        <span class="burger__line"></span>
+                        <span class="burger__line"></span>
+                        <span class="burger__line"></span>
+                    </button>
                     <nav class="nav">
                         <ul class="nav__list">
                             <li class="nav__item"><a class="nav__link" href="">Why alivio</a></li>
-                            <li class="nav__item"><a class="nav__link" href="">So;ution</a></li>
+                            <li class="nav__item"><a class="nav__link" href="">Solution</a></li>
                             <li class="nav__item"><a class="nav__link" href="">Community</a></li>
                             <li class="nav__item"><a class="nav__link" href="">Pricing</a></li>
                         </ul>
